--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.11"
 jupyterlab = "^4.1.2"
 pandas = "^2.2.1"
 pre-commit = "^3.6.2"
+scipy = "^1.12.0"
+scikit-learn = "^1.4.1.post1"
 
 
 [build-system]
