--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ pandas = "^2.2.1"
 pre-commit = "^3.6.2"
 scipy = "^1.12.0"
 scikit-learn = "^1.4.1.post1"
+kmodes = "^0.12.2"
+matplotlib = "^3.8.3"
 
 
 [build-system]
