--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ scipy = "^1.12.0"
 scikit-learn = "^1.4.1.post1"
 kmodes = "^0.12.2"
 matplotlib = "^3.8.3"
+seaborn = "^0.13.2"
 
 
 [build-system]
